# workspace

src/: gimbal_system_launch.py  (+1 more)
src/chassis_hardware/: CMakeLists.txt  README.md  package.xml  setup.py
src/chassis_hardware/chassis_hardware/: victory_led_controller.py
src/chassis_hardware/config/: chassis_hardware_params.yaml
src/chassis_hardware/include/chassis_hardware/: chassis_hardware_node.hpp  gpio.py
src/chassis_hardware/launch/: chassis_hardware.launch.py  chassis_hardware_debug.launch.py  chassis_simulation.launch.py  chassis_with_led.launch.py
src/chassis_hardware/scripts/: chassis_simulation.py  test_chassis.py  test_gimbal_angles.py  victory_led_controller.py
src/chassis_hardware/src/: chassis_hardware_node.cpp  main.cpp
src/diffbot_service/: CMakeLists.txt  package.xml
src/diffbot_service/config/: diffbot_service_config.yaml
src/diffbot_service/launch/: diffbot_complete.launch.py  diffbot_gui.launch.py  diffbot_service.launch.py  diffbot_with_gui.launch.py
src/diffbot_service/scripts/: call_start_service.py  diffbot_gui_node.py  publish_number.py
src/diffbot_service/src/: diffbot_service_node.cpp
src/drpower_ros2_controllers/drpower_hardware_interface/: CMakeLists.txt  drpower_hardware_interface.xml  package.xml
src/drpower_ros2_controllers/drpower_hardware_interface/config/: drpower_controllers.yaml  drpower_hardware.yaml
src/drpower_ros2_controllers/drpower_hardware_interface/examples/: advanced_test.py  test_drpower_arm.py  test_drpower_gimbal.py
src/drpower_ros2_controllers/drpower_hardware_interface/launch/: drpower_arm.launch.py
src/drpower_ros2_controllers/drpower_hardware_interface/src/: can_driver.cpp  drpower_hardware_interface.cpp
src/drpower_ros2_controllers/drpower_hardware_interface/test/: test_can_communication.cpp  test_drpower_hardware_interface.cpp
src/drpower_ros2_controllers/drpower_hardware_interface/urdf/: drpower_ros2_control.xacro
src/drpower_ros2_controllers/drpower_moveit_config/: CMakeLists.txt  package.xml
src/drpower_ros2_controllers/drpower_moveit_config/config/: joint_limits.yaml  kinematics.yaml
src/drpower_ros2_controllers/drpower_moveit_config/launch/: drpower_moveit_demo.launch.py
src/gimbal_description/: CMakeLists.txt  README.md  package.xml
src/gimbal_description/config/: gimbal.rviz
src/gimbal_description/launch/: display.launch.py  robot_state_publisher.launch.py
src/gimbal_description/urdf/: gimbal.urdf.xacro
src/gimbal_pixel_mapper/: package.xml  setup.cfg  setup.py
src/gimbal_pixel_mapper/config/: pixel2gimbal.yaml
src/gimbal_pixel_mapper/gimbal_pixel_mapper/: pixel_to_gimbal_node.py
src/gimbal_pixel_mapper/launch/: pixel_to_gimbal_launch.py
src/gimbal_serial_comm/: CMakeLists.txt  package.xml  setup.cfg  setup.py  test_gimbal_system.py  test_serial_comm.py
src/gimbal_serial_comm/config/: config.yaml
src/gimbal_serial_comm/gimbal_serial_comm/: serial_comm_node.py
src/gimbal_serial_comm/launch/: serial_comm_launch.py
src/jump_start/: README.md  demo.sh  integration_test.sh  package.xml  position_demo.sh  position_tracking_demo.py  position_tracking_test.py  setup.py  test_config.py  test_integration.py  test_jump_start.py  test_parameters.py  test_position_logic.py
src/jump_start/config/: fsm_config.yaml
src/jump_start/jump_start/: __init__.py  fsm_controller.py  mission_executor.py  simple_demo.py
src/jump_start/launch/: integrated_system.launch.py  jump_start.launch.py
src/jump_start/resource/: jump_start
src/jump_start/srv/: StartMission.srv  StopMission.srv
src/jump_start/video/: README.md
src/rb21_navigation_controller_msgs/: CMakeLists.txt  package_old.xml
src/rb21_navigation_controller_msgs/action/: NavigateToGoal.action
src/robot_behavior_tree/: CMakeLists.txt  README.md  package.xml  setup.py
src/robot_behavior_tree/action/: PatrolMission.action  RobotMission.action  SearchAndTrack.action
src/robot_behavior_tree/behavior_trees/: robot_main_behavior.xml  search_and_track.xml
src/robot_behavior_tree/config/: behavior_tree_config.yaml
src/robot_behavior_tree/include/robot_behavior_tree/: detection_nodes.hpp  gimbal_nodes.hpp  navigation_nodes.hpp
src/robot_behavior_tree/launch/: robot_behavior_tree.launch.py
src/robot_behavior_tree/msg/: BehaviorTreeStatus.msg  MissionCommand.msg
src/robot_behavior_tree/resource/: robot_behavior_tree
src/robot_behavior_tree/robot_behavior_tree/: __init__.py  mission_demo.py
src/robot_behavior_tree/scripts/: behavior_tree_monitor.py
src/robot_behavior_tree/src/: behavior_tree_executor.cpp
src/robot_behavior_tree/srv/: StartMission.srv  StopMission.srv
src/simple_navigation/: CMakeLists.txt  README.md  package.xml
src/simple_navigation/launch/: full_navigation_demo.launch.py  simple_navigation.launch.py  standalone_navigation.launch.py
src/simple_navigation/scripts/: send_waypoints.py
src/simple_navigation/src/: simple_navigator.cpp
src/ti_diffbot_hardware/: CMakeLists.txt  README.md  README_TEST.md  package.xml  ti_diffbot_hardware.xml
src/ti_diffbot_hardware/config/: diffbot_controllers.yaml  hardware_interface.yaml
src/ti_diffbot_hardware/docs/: serial_communication_protocol.md
src/ti_diffbot_hardware/include/ti_diffbot_hardware/: ti_diffbot_hardware.hpp
src/ti_diffbot_hardware/launch/: diffbot_hardware.launch.py  test_chassis.launch.py
src/ti_diffbot_hardware/rviz/: diffbot_visualization.rviz
src/ti_diffbot_hardware/scripts/: check_system.py  diagnose_nav_blocking.py  diagnose_odom.py  monitor_low_level.py  serial_test.py  test_chassis.py  test_diffbot.py  test_improved_hardware.py  test_performance.py  test_realtime.py  test_serial.py  test_timestamp_sync.py
src/ti_diffbot_hardware/src/: ti_diffbot_hardware.cpp
src/ti_diffbot_hardware/urdf/: ti_diffbot.urdf.xacro
src/yolo_detector/: CMakeLists.txt  package.xml  setup.py
src/yolo_detector/launch/: README_yolo_detector.md  yolo_detector.launch.py
src/yolo_detector/msg/: DetectionBox.msg
src/yolo_detector/scripts/: yolo_wrapper.py
src/yolo_detector/yolo_detector/: __init__.py  detector_node.py
(+198 files in other folders)
