<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gimbal_description</name>
  <version>0.0.0</version>
  <description>URDF model for gimbal system with TF tree: screen_frame -> camera_link -> gimbal_base_link -> pan_joint -> gimbal_pan_link -> tilt_joint -> gimbal_tilt_link -> laser_link</description>
  <maintainer email="sirius@example.com">Sirius</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
