<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drpower_hardware_interface</name>
  <version>1.0.0</version>
  <description>ROS2 hardware interface for DrPower intelligent actuators</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/your-repo/drpower_ros2_controllers</url>
  <url type="bugtracker">https://github.com/your-repo/drpower_ros2_controllers/issues</url>
  <url type="repository">https://github.com/your-repo/drpower_ros2_controllers</url>
  
  <author email="your.email@example.com">Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
