<?xml version="1.0"?>
<package format="3">
  <name>drpower_moveit_config</name>
  <version>1.0.0</version>
  <description>MoveIt2配置包，用于DrPower机械臂</description>
  <maintainer email="dev@drpower.com">DrPower Development Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>drpower_hardware_interface</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
